Changed some colors

--- a/templates/learning.html
+++ b/templates/learning.html
@@ -15,7 +15,7 @@
             <img src="{{module.image}}">
         </div>
         <div class="module-audio">
-            <audio src={{module.audio}} preload="auto" type="audio/mpeg" controls autoplay></audio> 
+            <audio src={{module.audio}} preload="auto" type="audio/mpeg" controls></audio> 
         </div>
     </div>
 </div>
