--- a/templates/report.html
+++ b/templates/report.html
@@ -36,18 +36,21 @@
     <div class = "col-md-8 d-flex justify-content-center">
         <div class="checking">
             Are you...
-            <div class="check">
+            <label class="check_container">Focusing on your breathing?
                 <input type="checkbox" id="breathing">
-                <label for="breathing"> Focusing on your breathing?</label>
-            </div>
-            <div class="check">
+                <span class="checkmark"></span>
+              </label>
+              
+              <label class="check_container">Checking in with your body?
                 <input type="checkbox" id="body">
-                <label for="body"> Checking in with your body?</label>
-            </div>
-            <div class="check">
+                <span class="checkmark"></span>
+              </label>
+              
+              <label class="check_container">Letting go of your thoughts?
                 <input type="checkbox" id="thoughts">
-                <label for="thoughts"> Letting go of your thoughts?</label><br>
-            </div>
+                <span class="checkmark"></span>
+              </label>
+            
         </div>
     </div>
 </div>
