--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,7 @@
 :root {
     --primary-blue: #4B8090;
     --secondary-brown: #C09471;
+    --secondary-blue: #011F2A;
     --green: rgba(10, 82, 26, 0.6);
     --red: rgba(252, 1, 1, 0.3);
 }
@@ -39,6 +40,7 @@ button {
 img {
     width: 100%;
     height: 100%;
+    border: 3px solid var(--secondary-brown) 
 }
 
 /*--------------------------------------------------------------
@@ -53,6 +55,10 @@ nav * {
 
 .navbar-brand {
     font-weight: 800;
+}
+
+nav *:hover{
+    color: var(--secondary-blue)
 }
 
 .navbar-nav {
@@ -74,6 +80,11 @@ nav * {
     border-radius: 60px;
 }
 
+#startBtn:hover, .continue-btn:hover, #startq:hover {
+    background-color: var(--secondary-blue);
+    cursor: pointer
+}
+
 #startBtn {
     margin-top: 30px;
 }
@@ -92,7 +103,10 @@ nav * {
 }
 
 .module-text {
-    margin: 20px 0px 20px 0px;
+    margin: 20px 0px 30px 0px;
+    width: 75%;
+    text-indent: 50px;
+    line-height: 1.75;
 }
 
 .module-photo {
@@ -168,6 +182,7 @@ nav * {
 .answer:hover {
     background-color: var(--primary-blue);
     color: white;
+    cursor:pointer
 }
 
 #info {
@@ -227,7 +242,7 @@ nav * {
     width: 25px;
     height: 25px;
     border-radius: 50%; 
-    background: #04AA6D;
+    background: var(--secondary-brown);
     cursor: pointer;
 }
   
@@ -235,7 +250,7 @@ nav * {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #04AA6D;
+    background: var(--secondary-brown);
     cursor: pointer;
 }
 
@@ -245,8 +260,75 @@ nav * {
 }
 
 .check{
-    width:100%
+    width:100%;
 }
+  
+ /* Customize the label (the container) */
+.check_container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .check_container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .check_container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .check_container input:checked ~ .checkmark {
+    background-color: var(--primary-blue);
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .check_container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .check_container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
 
 textarea:focus::placeholder {
     color: transparent;
