Edited homepage text

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,8 +15,8 @@
     <div class="row">
         <div class="col-6">
             <div class="hero-container">
-                <h1>Meditation</h1>
-                <p>Mindfulness training can be beneficial to your mental well being</p>
+                <h1>Introduction to Mindfulness</h1>
+                <p>Mindfullness is a life long jounrey, begin yours today through meditation by clicking on continue</p>
                 <button id="startBtn">Start Now</button>
             </div>
         </div>
