--- a/templates/learning_end.html
+++ b/templates/learning_end.html
@@ -15,213 +15,173 @@
 <div class="row">
     <div class="col-3 d-flex flex-column">
         <div class="d-flex justify-content-center"><h2>Letting Go</h2></div>
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Emotionally</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="let_feel"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Emotionally</div>
+            <div class="card-body">
+              <p class="card-text response" id="let_feel" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
         <div class="d-flex justify-content-center"><h2>Box Breathing</h2></div>
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Emotionally</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="bre_feel"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px">
+            <div class="card-header" style="background-color: var(--primary-blue)">Emotionally</div>
+            <div class="card-body">
+              <p class="card-text response" id="bre_feel" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
         <div class="d-flex justify-content-center"><h2>Blue Sky</h2></div>
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Emotionally</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="sky_feel"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px">
+            <div class="card-header" style="background-color: var(--primary-blue)">Emotionally</div>
+            <div class="card-body">
+              <p class="card-text response" id="sky_feel" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
         <div class="d-flex justify-content-center"><h2>Final Meditation</h2></div>
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Emotionally</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="fin_feel"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px">
+            <div class="card-header" style="background-color: var(--primary-blue)">Emotionally</div>
+            <div class="card-body">
+              <p class="card-text response" id="fin_feel" style="color: black"></p>
             </div>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Focusing on Breathing?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="let_bre"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Focusing on Breathing?</div>
+            <div class="card-body">
+              <p class="card-text response" id="let_bre" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Focusing on Breathing?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="bre_bre"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Focusing on Breathing?</div>
+            <div class="card-body">
+              <p class="card-text response" id="bre_bre" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Focusing on Breathing?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="sky_bre"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Focusing on Breathing?</div>
+            <div class="card-body">
+              <p class="card-text response" id="sky_bre" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Focusing on Breathing?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="fin_bre"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Focusing on Breathing?</div>
+            <div class="card-body">
+              <p class="card-text response" id="fin_bre" style="color: black"></p>
             </div>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Listen to your body?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="let_bod"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Listen to your body?</div>
+            <div class="card-body">
+              <p class="card-text response" id="let_bod" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Listen to your body?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="bre_bod"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Listen to your body?</div>
+            <div class="card-body">
+              <p class="card-text response" id="bre_bod" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Listen to your body?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="sky_bod"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Listen to your body?</div>
+            <div class="card-body">
+              <p class="card-text response" id="sky_bod" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Listen to your body?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="fin_bod"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Listen to your body?</div>
+            <div class="card-body">
+              <p class="card-text response" id="fin_bod" style="color: black"></p>
             </div>
         </div>
     </div>
 </div>
 <div class="row">
      <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Releasing thoughts?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="let_tho"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Releasing Thoughts?</div>
+            <div class="card-body">
+              <p class="card-text response" id="let_tho" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Releasing thoughts?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="bre_tho"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Releasing Thoughts?</div>
+            <div class="card-body">
+              <p class="card-text response" id="bre_tho" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Releasing thoughts?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="sky_tho"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Releasing Thoughts?</div>
+            <div class="card-body">
+              <p class="card-text response" id="sky_tho" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Releasing thoughts?</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="fin_tho"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Releasing Thoughts?</div>
+            <div class="card-body">
+              <p class="card-text response" id="fin_tho" style="color: black"></p>
             </div>
         </div>
     </div>
 </div>
 <div class="row">
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Notes</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="let_notes"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Notes</div>
+            <div class="card-body">
+              <p class="card-text response" id="let_notes" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Notes</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="bre_notes"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Notes</div>
+            <div class="card-body">
+              <p class="card-text response" id="bre_notes" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Notes</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="sky_notes"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Notes</div>
+            <div class="card-body">
+              <p class="card-text response" id="sky_notes" style="color: black"></p>
             </div>
         </div>
     </div>
     <div class="col-3 d-flex flex-column">
-        <div class="report-card">
-            <div class="report-card-header">
-                <h6>Notes</h6>
-            </div>
-            <div class="report-card-content">
-                <p class="response" id="fin_notes"></p>
+        <div class="card text-white" style="width: 15rem; margin: 10px;">
+            <div class="card-header" style="background-color: var(--primary-blue)">Notes</div>
+            <div class="card-body">
+              <p class="card-text response" id="fin_notes" style="color: black"></p>
             </div>
         </div>
     </div>
