fixed spelling mistakes

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,7 +16,8 @@
         <div class="col-6">
             <div class="hero-container">
                 <h1>Introduction to Mindfulness</h1>
-                <p>Mindfullness is a life long jounrey, begin yours today through meditation by clicking on continue</p>
+                <p>Mindfulness is a life long journey.</p> 
+                <p>Begin yours today through learning meditation.</p>
                 <button id="startBtn">Start Now</button>
             </div>
         </div>
