Changed layout of learning end page

--- a/templates/learning_end.html
+++ b/templates/learning_end.html
@@ -13,44 +13,209 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-3 d-flex flex-column">
-        <div class="d-flex justify-content-center"><h2>Letting Go</h2></div>
-        <div class="card text-white" style="width: 15rem; margin: 10px;">
-            <div class="card-header" style="background-color: var(--primary-blue)">Emotionally</div>
-            <div class="card-body">
-              <p class="card-text response" id="let_feel" style="color: black"></p>
-            </div>
-        </div>
+    <div class="col-2">
     </div>
-    <div class="col-3 d-flex flex-column">
-        <div class="d-flex justify-content-center"><h2>Box Breathing</h2></div>
-        <div class="card text-white" style="width: 15rem; margin: 10px">
-            <div class="card-header" style="background-color: var(--primary-blue)">Emotionally</div>
-            <div class="card-body">
-              <p class="card-text response" id="bre_feel" style="color: black"></p>
+    <div class="col-10">
+        <div class="row">
+            <div class="col-3">
+                <div class="d-flex justify-content-center report-title"><h3>Letting Go</h3></div>
             </div>
-        </div>
-    </div>
-    <div class="col-3 d-flex flex-column">
-        <div class="d-flex justify-content-center"><h2>Blue Sky</h2></div>
-        <div class="card text-white" style="width: 15rem; margin: 10px">
-            <div class="card-header" style="background-color: var(--primary-blue)">Emotionally</div>
-            <div class="card-body">
-              <p class="card-text response" id="sky_feel" style="color: black"></p>
+            <div class="col-3">
+                <div class="d-flex justify-content-center report-title"><h3>Box Breathing</h3></div>
             </div>
-        </div>
-    </div>
-    <div class="col-3 d-flex flex-column">
-        <div class="d-flex justify-content-center"><h2>Final Meditation</h2></div>
-        <div class="card text-white" style="width: 15rem; margin: 10px">
-            <div class="card-header" style="background-color: var(--primary-blue)">Emotionally</div>
-            <div class="card-body">
-              <p class="card-text response" id="fin_feel" style="color: black"></p>
+            <div class="col-3">
+                <div class="d-flex justify-content-center report-title"><h3>Blue Sky</h3></div>
+            </div>
+            <div class="col-3">
+                <div class="d-flex justify-content-center report-title"><h3>Final Meditation</h3></div>
             </div>
         </div>
     </div>
 </div>
+<div style="margin-top: 30px;"class="row d-flex align-items-center report-row">
+    <div class="col-2 emotion-report">
+        <div class="icon-container">
+            <img style="border: none" src="/static/icons/bipolar.png">
+        </div>
+        <div>
+            <p>Emotionally</p>
+        </div>
+       
+    </div>
+    <div class="col-10">
+        <div class="row">
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="let_feel"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                
+                <div class="content">
+                    <h4 class="response" id="bre_feel"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="sky_feel"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="fin_feel"></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row d-flex align-items-center report-row">
+    <div class="col-2 emotion-report">
+        <div class="icon-container">
+            <img style="border: none" src="/static/icons/breath.png">
+        </div>
+        <div style="text-align: center;">
+            <p>Focusing on Breathing</p>
+        </div>
+    </div>
+    <div class="col-10">
+        <div class="row">
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="let_bre"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="bre_bre"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="sky_bre"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="fin_bre"></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row d-flex align-items-center report-row">
+    <div class="col-2 emotion-report">
+        <div class="icon-container">
+            <img style="border: none" src="/static/icons/humanoid.png">
+        </div>
+        <p>Listen to your body?</p>
+    </div>
+    <div class="col-10">
+        <div class="row">
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="let_tho"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="bre_tho"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="sky_tho"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="fin_tho"></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row d-flex align-items-center report-row">
+    <div class="col-2 emotion-report">
+        <div class="icon-container">
+            <img style="border: none; margin-left: 10px" src="/static/icons/thought-bubble.png">
+        </div>
+        <div>
+            <p>Releasing Thoughts?</p>
+        </div>
+    </div>
+    <div class="col-10">
+        <div class="row">
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="let_bod"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="bre_bod"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="sky_bod"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="fin_bod"></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row d-flex align-items-center report-row">
+    <div class="col-2 emotion-report">
+        <div class="icon-container">
+            <img style="border: none; margin-left: 10px" src="/static/icons/notes.png">
+        </div>
+        <div>
+            <p>Notes</p>
+        </div>
+    </div>
+    <div class="col-10">
+        <div class="row">
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="let_notes"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="bre_notes"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="sky_notes"></h4>
+                </div>
+            </div>
+            <div class="col-3 d-flex flex-column align-items-center">
+                <div class="content">
+                    <h4 class="response" id="fin_notes"></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row" id="learning_message">
+    <div class="col-12 d-flex justify-content-center">
+        <p class="d-flex flex-column align-items-center">
+            Congratulations! You finished the learning portion!
+            <span>Are you ready to take the quiz?</span>
+        </p>
+    </div>
+</div>
 <div class="row">
+    <div class="col-12 d-flex justify-content-center">
+        <button class="continue-btn" id="takeQuizBtn">Go to Quiz</button>
+    </div>
+</div>
+<!-- <div class="row">
     <div class="col-3 d-flex flex-column">
         <div class="card text-white" style="width: 15rem; margin: 10px;">
             <div class="card-header" style="background-color: var(--primary-blue)">Focusing on Breathing?</div>
@@ -198,6 +363,6 @@
     <div class="col-12 d-flex justify-content-center">
         <button class="continue-btn" id="takeQuizBtn">Go to Quiz</button>
     </div>
-</div>
+</div> -->
 
 {% endblock %}
