changed font of learning-end

--- a/templates/learning_end.html
+++ b/templates/learning_end.html
@@ -74,7 +74,7 @@
             <img style="border: none" src="/static/icons/breath.png">
         </div>
         <div style="text-align: center;">
-            <p>Focusing on Breathing</p>
+            <p>Focusing on breathing?</p>
         </div>
     </div>
     <div class="col-10">
@@ -107,7 +107,9 @@
         <div class="icon-container">
             <img style="border: none" src="/static/icons/humanoid.png">
         </div>
-        <p>Listen to your body?</p>
+        <div style="text-align: center;">
+            <p>Listening to your body?</p>
+        </div>
     </div>
     <div class="col-10">
         <div class="row">
@@ -140,7 +142,7 @@
             <img style="border: none; margin-left: 10px" src="/static/icons/thought-bubble.png">
         </div>
         <div>
-            <p>Releasing Thoughts?</p>
+            <p>Releasing thoughts?</p>
         </div>
     </div>
     <div class="col-10">
