--- a/static/main.css
+++ b/static/main.css
@@ -155,6 +155,13 @@ nav *:hover{
 #learning_message {
     margin-top: 20px;
 }
+
+.response{
+    font-size:18px;
+    font-weight: normal;
+    color: darkslategray
+
+}
 /*--------------------------------------------------------------
 # Quiz
 --------------------------------------------------------------*/
