changed font color

--- a/static/main.css
+++ b/static/main.css
@@ -159,7 +159,7 @@ nav *:hover{
 .response{
     font-size:18px;
     font-weight: normal;
-    color: darkslategray
+    color: rgb(59, 61, 61)
 
 }
 /*--------------------------------------------------------------
